fix for user menu on mobile and image scaling on galleries

--- a/tapas_redesign/assets/sass/components/home.scss
+++ b/tapas_redesign/assets/sass/components/home.scss
@@ -75,11 +75,10 @@
     width: 96%;
     margin-left: 2%;
     > .item > img, > .item > a > img{
-      width:auto;
-      max-width:100%;
-      height:200px;
-      margin-left:auto;
-      margin-right:auto;
+     margin-left: auto;
+     margin-right: auto;
+     height: auto;
+     width: 100%;
     }
   }
   .carousel-caption{
